dropshot/tests/fail/bad_trait_endpoint12.stderr
error[E0277]: endpoint handler functions must return a value that implements `dropshot::HttpResponse`
  --> tests/fail/bad_trait_endpoint12.rs:24:10
   |
24 |     ) -> Result<String, HttpError>;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `HttpResponse` is not implemented for `Result<std::string::String, dropshot::HttpError>`
   |
   = note: `HttpResponse` is implemented for `Result<T, E>` where `T: HttpResponse` and `E: HttpResponseError`
   = note: `HttpResponse` is implemented for `http::Response<dropshot::Body>`
   = help: the trait `HttpResponse` is implemented for `Result<T, E>`
note: required by a bound in `ApiEndpoint::<StubContext>::new_for_types`
  --> src/api_description.rs
   |
   |     pub fn new_for_types<FuncParams, ReturnType>(
   |            ------------- required by a bound in this associated function
...
   |         ReturnType: HttpResponse + Send + Sync + 'static,
   |                     ^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<StubContext>::new_for_types`

error[E0277]: the trait bound `fn(RequestContext<<ServerImpl as MyApi>::Context>) -> impl Future<Output = Result<std::string::String, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::bad_response_type}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_trait_endpoint12.rs:18:5
   |
14 |   #[dropshot::api_description]
   |   ---------------------------- required by a bound introduced by this call
...
18 | /     #[endpoint {
19 | |         method = GET,
20 | |         path = "/test",
21 | |     }]
22 | |     async fn bad_response_type(
   | |______________________________^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<<ServerImpl as MyApi>::Context>) -> impl Future<Output = Result<std::string::String, dropshot::HttpError>> + Send + 'static {<ServerImpl as MyApi>::bad_response_type}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
